tests/NormalTests/paczka1/small_fuzzy/17484522.err
Error in line 1: 4QwWqME0 S806 8,5
Error in line 4: A568 A17 17,5
Error in line 5: 4QwWqME0 A17 7,7
Error in line 7: qCMhL S806 82,8
